--- a/Frontend/isiscapitalist/src/Manager.css
+++ b/Frontend/isiscapitalist/src/Manager.css
@@ -12,7 +12,7 @@
     background-color: white;
     /* opaque */
     border: solid;
-    top: 10;
+    top: 10%;
     /* a 10% du haut */
     left: 20%;
     /* a 20% de la gauche */
