--- a/Frontend/isiscapitalist/src/Main.css
+++ b/Frontend/isiscapitalist/src/Main.css
@@ -1,6 +1,7 @@
 .header {
     display: grid;
-    grid-template-columns: 25% 25% 30% 20%;
+    grid-template-rows: 50% 50%;
+    column-gap: 5px;
 }
 
 .main {
